Use an abstract log strategy